css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.task-list-item::before {
  @apply hidden;
}

.task-list-item {
  @apply list-none;
}

.footnotes {
  @apply mt-12 border-t border-gray-200 pt-8 dark:border-gray-700;
}

.data-footnote-backref {
  @apply no-underline;
}

.csl-entry {
  @apply my-5;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition:
    background-color 600000s 0s,
    color 600000s 0s;
}

.katex-display {
  overflow: auto hidden;
}

.content-header-link {
  opacity: 0;
  margin-left: -24px;
  padding-right: 4px;
}

.content-header:hover .content-header-link,
.content-header-link:hover {
  opacity: 1;
}

.linkicon {
  display: inline-block;
  vertical-align: middle;
}

code,
kbd,
pre,
samp {
  font-family: var(--font-jetbrains-mono), monospace;
  font-weight: 500;
}

.multiline-underline {
  position: relative;
  padding-bottom: 0.15em;
  background-image: linear-gradient(
    90deg,
    rgba(255,126,95,0.4),
    rgba(254,180,123,0.4),
    rgba(109,175,34,0.4),
    rgba(134,168,231,0.4),
    rgba(127,127,213,0.4)
  );
  background-repeat: no-repeat; 
  background-position: 0 100%;
  background-size: 0% 0.4em;
  box-decoration-break: clone;
  -webkit-box-decoration-break: clone;
  border-radius: 9999px;

  will-change: background-size, background-position;
  transition:
    background-size var(--duration, 300ms) cubic-bezier(0.4, 0, 0.2, 1),
    background-position var(--duration, 300ms) cubic-bezier(0.4, 0, 0.2, 1);
}
.group:hover .multiline-underline,
.multiline-underline:hover {
  background-size: 100% 0.4em;
  background-position: 0 100%;
}

.group:not(:hover) .multiline-underline {
  background-size: 0% 0.4em;
  background-position: 0% 100%;
}
 

